<resources>
    <string name="app_name">Rumah Sakit Rujukan Covid-19</string>
    <string name="log_in">Log In</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="no_account_question">Don\'t Have Account?</string>
    <string name="register_here">Register here</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="creating_account_policy">Creating an account means you\'re okay with our Terms of Service and our Privacy Policy</string>
    <string name="create_account">Create Account</string>
    <string name="user_normal">User</string>
    <string name="hospital_admin">Admin</string>
    <string name="register_as">Register As?</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="search">Search</string>
    <string name="next">Next</string>
    <string name="email_verification">Email Verification</string>
    <string name="check_your_email_and_verify">Check your email and verify</string>
    <string name="name_cannot_blank">Name can\'t blank</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="password_length_less_than_8">Password length less then 8</string>
    <string name="password_is_not_same">Password is not same</string>
    <string name="you_register_as">You are register as</string>
    <string name="cancel">Cancel</string>
    <string name="title_user">User</string>
    <string name="title_hospital_admin">Hospital Admin</string>
    <string name="email_not_verify">Email not verified, please check your email</string>
    <string name="title_chat_user">Chat</string>
    <string name="title_bookmark_user">Bookmark</string>
    <string name="title_history_user">HIstory</string>
    <string name="title_profile_user">Profile User</string>
    <string name="loading">Loading...</string>
    <string name="empty_item_hospital_name">No hospitals found</string>
    <string name="email_admin_not_valid">Sorry, your email is not registered as admin</string>
    <string name="title_chat_admin">Chat Admin</string>
    <string name="title_profile_admin">Profile Admin</string>
    <string name="this_is_the_hospital_where_you_work">This is the hospital where you work</string>
    <string name="no_hospital_found">No hospital found</string>
    <string name="yes">OK</string>
    <string name="title_profile_hospital">Profile Hospital</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="registration_rejected">Registration Rejected</string>
    <string name="registration_accept_by_admin">Your registration at %s hospital has been accepted by admin</string>
    <string name="registration_rejected_by_admin">Your registration at %s hospital has been rejected by admin</string>
    <string name="new_registration">New Registration</string>
    <string name="new_registration_from_user">New registration from %s</string>
    <string name="check_your_email_and_change_password">Check your email and change password</string>
</resources>