<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_view_register_as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:paddingStart="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_4"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/you_register_as"
        android:textAlignment="textEnd"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toBottomOf="@id/tv_register_as"
        app:layout_constraintEnd_toStartOf="@id/tv_register_as"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_register_as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_4"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_32"
        android:paddingEnd="@dimen/dp_32"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/textColorPrimaryDark"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toBottomOf="@id/text_view_register_as"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_view_register_as"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="User"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_32"
        android:background="@drawable/bg_btn_cancel"
        android:fontFamily="@font/poppins_regular"
        android:paddingHorizontal="@dimen/dp_16"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:theme="@style/MyButtonTheme.RED"
        app:layout_constraintEnd_toStartOf="@id/btn_next"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_register_as"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_32"
        android:layout_marginBottom="@dimen/dp_32"
        android:background="@drawable/bg_btn_next"
        android:fontFamily="@font/poppins_regular"
        android:paddingHorizontal="@dimen/dp_16"
        android:text="@string/next"
        android:textColor="@color/textColorPrimary"
        android:theme="@style/MyButtonTheme.WHITE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@id/text_view_register_as"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>