<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.forgot.ForgotActivity">

    <TextView
        android:id="@+id/text_view_forgot_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_16"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/forgot_password_title"
        android:textAlignment="center"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/sp_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/id_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_close"
        android:background="@android:color/transparent"
        app:tint="@color/gray"
        app:layout_constraintTop_toTopOf="@id/text_view_forgot_password"
        app:layout_constraintStart_toStartOf="@id/text_view_forgot_password"
        app:layout_constraintBottom_toBottomOf="@id/text_view_forgot_password"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/sp_20"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@id/text_view_forgot_password"
        app:layout_constraintTop_toTopOf="@id/text_view_forgot_password"
        app:layout_constraintBottom_toBottomOf="@id/text_view_forgot_password"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@id/text_view_forgot_password"
        app:layout_constraintStart_toStartOf="@id/text_view_forgot_password"
        app:layout_constraintTop_toBottomOf="@id/text_view_forgot_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/dp_16"
            android:textColor="@color/gray"
            android:textSize="@dimen/sp_16"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_forgot_password"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:background="@drawable/bg_btn_green"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/forgot_password_title"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="@id/text_input_email"
        app:layout_constraintStart_toStartOf="@id/text_input_email"
        app:layout_constraintTop_toBottomOf="@id/text_input_email" />

</androidx.constraintlayout.widget.ConstraintLayout>